# LogicMinimizerCArrayGen

./: CMakeLists.txt  main.cpp
